# mcp-uuid

./: README.md  pyproject.toml
src/uuid_server/: __init__.py  main.py
tests/: test_uuid_server.py
