[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uuid-server"
version = "0.1.0"
description = "MCP server that generates UUID4"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pytest",
    "ruff",
    "mcp",
]

[project.scripts]
uuid-server = "uuid_server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/uuid_server"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "N"]
